<resources>
    <string name="app_name">LifeStyle</string>
    <string name="hello">Hello Word</string>
    <string name="creer">Create</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">Confirmation</string>
    <string name="ok">Ok</string>
    <string name="nom">Last Name:</string>
    <string name="prenom">First Name:</string>
    <string name="email">Email:</string>
    <string name="sexe">Sexe</string>
    <string name="sexe_m">M</string>
    <string name="sexe_f">F</string>
    <string name="matricule">Matricule</string>
    <string name="session">Session:</string>

    <!--    erreur traitement formulaire contact-->
    <string name="error_form_contact">Veuillez bien remplir tout les champs</string>
    <string name="sucess_init_form">Votre formulaire est reinitialise avec Sucess</string>
    <string name="todo">todo</string>
    <string name="paterne_guiffo">Paterne Guiffo</string>
    <string name="paterne">"Paterne "</string>
    <string name="my_email">guiffopaterne@m2iformation.fr</string>
    <string name="exemple_matricule">2025PAT/56</string>
    <string name="exemple_Session">SE25655688</string>
    <string name="refresh">Refresh</string>
    <string name="print_list">Imprimer</string>
    <string name="title_activity_naviagtion_drawer">NaviagtionDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bootom_navigation">BootomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_camera">Camera</string>
    <string name="title_gallery">Galerie</string>
    <string name="title_maps">Maps</string>
    <string name="more_picture">Plus D\'image</string>
    <string name="save">Save</string>
    <string name="clear_all">supprime BD</string>
    <string name="take">Prendre une Photo</string>
    <string name="partage_cette_photo">Partage cette Photo</string>
</resources>