<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item android:id="@+id/gallery_save_data"
            android:title="@string/save"
            android:icon="@drawable/baseline_save_alt_24"
            app:showAsAction="ifRoom"
            />
        <item android:id="@+id/gallery_refresh"
            android:title="@string/refresh"
            android:icon="@drawable/baseline_refresh_24"
            app:showAsAction="ifRoom"
            />
        <item android:id="@+id/gallery_more_plus"
            android:title="@string/more_picture"
            android:icon="@drawable/baseline_playlist_add_24"
            app:showAsAction="never"
            />
    <item android:id="@+id/gallery_clear_db"
        android:title="@string/clear_all"
        android:icon="@drawable/baseline_cancel_presentation_24"
        app:showAsAction="collapseActionView"
        />


</menu>