<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_material"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".jour2.ContactMaterialActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:startIconContentDescription="@string/app_name"
        android:id="@+id/label_nom"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nom"
            android:id="@+id/nom"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_nom"
        app:startIconContentDescription="@string/app_name"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_prenom"
        app:startIconContentDescription="@string/app_name"
        app:startIconDrawable="@drawable/baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_sexe"
        android:text="@string/sexe"
        android:textSize="@dimen/text_size"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/label_email"
        app:layout_constraintStart_toStartOf="parent"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        app:layout_constraintStart_toEndOf="@id/label_sexe"
        app:layout_constraintTop_toBottomOf="@id/label_email"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sexe_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sexe_m" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sexe_f"
            android:text="@string/sexe_f"
            />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_matricule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:startIconContentDescription="@string/app_name"
        app:startIconDrawable="@drawable/baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/matricule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/matricule"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_matricule"
        app:startIconContentDescription="@string/app_name"
        app:startIconDrawable="@drawable/baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/session"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/session"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        android:id="@+id/btnCreer"
        android:text="@string/creer"
        app:layout_constraintTop_toBottomOf="@id/label_session"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnAnnuler"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/label_session"
        app:layout_constraintStart_toEndOf="@id/btnCreer"
        app:layout_constraintWidth_percent="0.5"

        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/centre_m2i"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCreer"
        android:contentDescription="@string/todo"
        app:layout_constraintTop_toBottomOf="@id/btnCreer"
        android:scaleType="fitCenter"
        />

</androidx.constraintlayout.widget.ConstraintLayout>