<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jour2.ContactActivity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"
        />
    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/barrier"
        app:barrierDirection="end"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:constraint_referenced_ids="label_nom,label_prenom,label_email"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_nom"
        android:text="@string/nom"
        app:layout_constraintStart_toStartOf="@id/contact_main"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/contact_main"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/nom"
        android:inputType="text"
        android:labelFor="@id/label_nom"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_nom"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        android:id="@+id/label_prenom"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/nom"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/prenom"
        android:inputType="text"
        android:labelFor="@id/label_prenom"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_prenom"

        />

    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prenom" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:labelFor="@id/label_email"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/prenom"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/label_sexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexe"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/barrier"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/email">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sexe_m"
            android:text="@string/sexe_m"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sexe_f"
            android:text="@string/sexe_f"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/label_matricule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matricule"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/matricule"
        android:inputType="text"
        android:labelFor="@id/label_matricule"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/label_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matricule" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/session"
        android:inputType="text"
        android:labelFor="@id/label_session"
        app:layout_constraintStart_toStartOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/matricule"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <LinearLayout
        android:id="@+id/linear_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/session">

        <Button
            android:id="@+id/btnCreer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/creer"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnAnnuler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>